--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="hdr">
     <div class="logo">
-      <img id="loteria" src="img/Imagen de WhatsApp 2024-11-15 a las 00.18.24_3a2ffb8a-Photoroom.png " alt="">
+      <img id="loteria" src="Imagen de WhatsApp 2024-11-15 a las 00.18.24_3a2ffb8a-Photoroom.png " alt="">
     </div>
   </header>
 
